--- a/assets/style.css
+++ b/assets/style.css
@@ -60,8 +60,28 @@ header h1 {
 }
 
 #img {
-    height: 200px;
-    width: 300px;
+    border: 0;
+    height: 175px;
+    width: 350px;
+    border-radius: 5px;
+    
+}
+
+.st {
+    border: rgba(2, 255, 2, 0.356) solid 2px; 
+}
+
+#am {
+    float: right;
+}
+
+#pa {
+    margin: 0px;
+    max-width: 100px;
+}
+
+li {
+    list-style-type: none;
 }
 
 footer {
