--- a/assets/style.css
+++ b/assets/style.css
@@ -38,20 +38,24 @@ header h1 {
     flex-wrap: wrap;
 }
 
-.column {
-    float: left;
-    width: 32%;
+.col {
+    /* float: left; */
+    /* width: 32%; */
     padding: 15px;
     height: 400px;
     flex-wrap: wrap;
     color: seashell;
     margin-top: 20px;
     background-color: green;
-    margin-right: 12px;
-    margin-left: 12px;
+    /* margin-right: 12px; */
+    /* margin-left: 12px; */
     align-items: center;
+    border: 12px solid tan;
 }    
 
+.search {
+    display: inline;
+}
   
 .row:after {
     content: "";
