--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,7 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: column;
+    align-items: center;
 }
 
 header h1 {
@@ -27,8 +28,8 @@ header h1 {
 /* Apply Styles to Body */
 
 .hero {
-    height: 800px;
-    width: 100%;
+    height: 60vh;
+    width: 45vw;
     margin-bottom: 25px;
     background-image: url(./fishing-garner-state-park.jpg);
     background-size: cover;
@@ -36,6 +37,10 @@ header h1 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin-left: 25%;
+    margin-right: 25%;
+    align-items: center;
+    margin-top: 25px;
 }
 
 .col {
