--- a/assets/style.css
+++ b/assets/style.css
@@ -47,7 +47,7 @@ header h1 {
     /* float: left; */
     /* width: 32%; */
     padding: 15px;
-    height: 400px;
+    /*height: 400px;*/
     flex-wrap: wrap;
     color: seashell;
     margin-top: 20px;
